--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "nodemailer": "^6.9.3",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "@sendgrid/mail": "^7.7.0"
   }
 }
