Resolve merge conflicts and finalize SendGrid API-only email

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,8 @@ EMAIL_USER=
 EMAIL_PASS=
 SHOP_OWNER_EMAIL=fazalintmain271@gmail.com
 SESSION_SECRET=try
+PORT=3000
+EMAIL_USER=
+EMAIL_PASS=
+SHOP_OWNER_EMAIL=fazalintmain271@gmail.com
+SESSION_SECRET=try
